// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`row block Row block should be available 1`] = `
"<!-- wp:wp-bootstrap-blocks/row -->
<!-- wp:wp-bootstrap-blocks/column {\\"sizeMd\\":6} /-->

<!-- wp:wp-bootstrap-blocks/column {\\"sizeMd\\":6} /-->
<!-- /wp:wp-bootstrap-blocks/row -->"
`;

exports[`row block Should be possible to apply row options 1`] = `
"<!-- wp:wp-bootstrap-blocks/row {\\"noGutters\\":true} -->
<!-- wp:wp-bootstrap-blocks/column {\\"sizeMd\\":6} /-->

<!-- wp:wp-bootstrap-blocks/column {\\"sizeMd\\":6} /-->
<!-- /wp:wp-bootstrap-blocks/row -->"
`;

exports[`row block Should be possible to change column layout 1`] = `
"<!-- wp:wp-bootstrap-blocks/row {\\"template\\":\\"1-1-1\\"} -->
<!-- wp:wp-bootstrap-blocks/column {\\"sizeMd\\":4} /-->

<!-- wp:wp-bootstrap-blocks/column {\\"sizeMd\\":4} /-->

<!-- wp:wp-bootstrap-blocks/column {\\"sizeMd\\":4} /-->
<!-- /wp:wp-bootstrap-blocks/row -->"
`;

exports[`row block Should be possible to change column layout 2`] = `
"<!-- wp:wp-bootstrap-blocks/row {\\"template\\":\\"2-1\\"} -->
<!-- wp:wp-bootstrap-blocks/column {\\"sizeMd\\":8} /-->

<!-- wp:wp-bootstrap-blocks/column {\\"sizeMd\\":4} /-->
<!-- /wp:wp-bootstrap-blocks/row -->"
`;

exports[`row block Should be possible to enable column layout in editor 1`] = `
"<!-- wp:wp-bootstrap-blocks/row {\\"editorStackColumns\\":true} -->
<!-- wp:wp-bootstrap-blocks/column {\\"sizeMd\\":6} /-->

<!-- wp:wp-bootstrap-blocks/column {\\"sizeMd\\":6} /-->
<!-- /wp:wp-bootstrap-blocks/row -->"
`;

exports[`row block Should be possible to select custom template 1`] = `
"<!-- wp:wp-bootstrap-blocks/row {\\"template\\":\\"custom\\"} -->
<!-- wp:wp-bootstrap-blocks/column {\\"sizeMd\\":6} /-->

<!-- wp:wp-bootstrap-blocks/column {\\"sizeMd\\":6} /-->
<!-- /wp:wp-bootstrap-blocks/row -->"
`;
